# notion-api-py

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yaml
.github/workflows/: publish_to_pypi.yaml  release.yaml  test.yaml
notion_api_py/: notion_api.py  notion_collection_view_filter.py  notion_databases.py  notion_endpoints.py  notion_filter.py  notion_page.py  notion_properties.py  notion_relations.py
tests/: test_notion_api_py.py
