[tool.poetry]
name = "notion-api-py"
version = "1.0.0"
description = "A wrapper around notion api allowing you to create objects for your databases/pages and easily perform add/update/delete/filter operations in a more readable way"
authors = ["sunnydsouza <dsouzasunny1436@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.27"
urllib3 = "^1.26"
flake8= "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    'notion_api_py/__init__.py:__version__',
     'pyproject.toml:version',
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
repository = "testpypi"
build_command = "pip install poetry && poetry build"